<resources>
    <string name="app_name">SCOS</string>
    <string name="strOrder">点菜</string>
    <string name="strCheckOrdering">查看订单</string>
    <string name="strLoginOrSign">登录/注册</string>
    <string name="strHelp">系统帮助</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startUpdate">启动实时更新</string>
    <string name="stopUpdate">停止实时更新</string>
    <string name="callService">呼叫服务</string>
    <string name="checkOrdered">查看订单</string>
    <string name="checkSubmitted">已点菜品</string>
</resources>
