<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemSubmitted"
        android:orderInCategory="100"
        android:title="@string/checkSubmitted"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemOrderedMeal"
        android:orderInCategory="100"
        android:title="@string/checkOrdered"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuItemHelp"
        android:orderInCategory="100"
        android:title="@string/callService"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuUpdate"
        android:orderInCategory="100"
        android:title="@string/startUpdate"
        app:showAsAction="never"/>

</menu>